Add UserProfile App, API (Register user, update first, last name), Remove Snippets App
