# api/serializers.py
@@ -1,30 +1,30 @@
 from rest_framework import serializers
-from snippets.models import Snippets
+from userprofile.models import Profile
 
 # Serializers define the API representation.
 
 class AvatarSerializer(serializers.ModelSerializer):  
        
     class Meta:
-        model = Snippets
+        model = Profile
         fields = ['avatar'] 
 
     def update(self, instance, validated_data):
         """
-        Update and return an existing `Snippet` instance, given the validated data.
+        Update and return an existing `Profile` instance, given the validated data.
         """
         instance.avatar = validated_data.get('avatar', instance.avatar)
         instance.save(update_fields=['avatar']) #Specify which fields to save
         return instance
                  
 
-class SnippetSerializer(serializers.ModelSerializer):
+class ProfileSerializer(serializers.ModelSerializer):
     age = serializers.SerializerMethodField(read_only=True)
     avatar_url = serializers.SerializerMethodField(read_only=True)
 
     class Meta:
-        model = Snippets
-        fields = ('id', 'first_name', 'last_name', 'date_of_birth', 'age', 'adult', 'status_text', 'remark_text', 'avatar_url', 'created_at', 'updated_at')
+        model = Profile
+        fields = ('id', 'date_of_birth', 'age', 'adult', 'bio_text', 'status_text', 'avatar_url', 'created_at', 'updated_at')
         read_only_fields = ('avatar_url', 'created_at')
 
 
