# userprofile/models.py
@@ -1,22 +1,21 @@
 import os
 import datetime
 from django.db import models
+from django.contrib.auth.models import User
 
 def get_avatar_full_path(instance, filename): 
     ext = filename.split('.')[-1]
     filename = '{0}.{1}'.format(instance.pk, ext)    
     return os.path.join("avatars", str(instance.pk), filename) 
 
-class Snippets(models.Model):
-    
-    first_name    = models.CharField(max_length=150, null=False, blank=False)
-    last_name     = models.CharField(max_length=150, null=True, blank=True)
+class Profile(models.Model):
+    user = models.OneToOneField(to=User,on_delete=models.CASCADE, null=True, blank=True)
     date_of_birth = models.DateField(null=True, blank=True)
 
     adult         = models.BooleanField(default=False)
 
-    status_text   = models.CharField(max_length=120, null=False, blank=False)
-    remark_text   = models.CharField(max_length=120, null=False, blank=False)
+    bio_text      = models.CharField(max_length=120, null=True, blank=True)
+    status_text   = models.CharField(max_length=120, null=True, blank=True)
 
     avatar        = models.ImageField(upload_to=get_avatar_full_path, null=True, blank=True, default='avatars/default_avatar.png')
 
@@ -24,7 +23,7 @@ class Snippets(models.Model):
     updated_at    = models.DateTimeField(auto_now=True)
 
     def __str__(self):
-        return '%s %s' % (self.first_name, self.last_name)
+        return '%s %s' % (self.user.first_name, self.user.last_name)
 
     @property
     def age(self):
@@ -42,4 +41,4 @@ class Snippets(models.Model):
         if not self.date_of_birth is None:
             self.is_adult()
 
-        super(Snippets, self).save(*args, **kwargs)
+        super(Profile, self).save(*args, **kwargs)
